--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@angular/material": "^14.1.3",
     "bootstrap": "^5.3.2",
     "json-server": "^0.17.3",
     "ng2-pdf-viewer": "^10.0.0",
