--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "bootstrap": "^5.3.2",
     "json-server": "^0.17.3",
+    "localize": "^0.4.7",
     "ng2-pdf-viewer": "^10.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.1",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.5.8",
     "jasmine-core": "~4.6.0",
