--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.2",
     "json-server": "^0.17.3",
     "localize": "^0.4.7",
+    "moment": "^2.30.1",
     "ng2-pdf-viewer": "^10.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
